--- a/teste.css
+++ b/teste.css
@@ -19,6 +19,8 @@ header {
     display: flex;
 }
 
+
+
 header h1 {
     color: white;
     font-size: 50px;
@@ -30,6 +32,8 @@ header h1 {
     font-weight: 100;
     font-style: normal;
 }
+
+
 
 header a {
     display: flex;
@@ -86,6 +90,10 @@ header a:hover {
     left: 40%;
 }
 
+.foto1 h1 {
+    display: none;
+}
+
 .texto1 {
     position: relative;
     right: 20%;
@@ -109,9 +117,12 @@ header a:hover {
     width: 400px;
     position: relative;
     top: 30px;
-    color: white;
-    font-family: "Roboto", sans-serif;
-    font-style: normal;
+    font-size: 17px; 
+    padding: 0; 
+    font-family: "Montserrat", sans-serif;
+    color: #f5f5f5;
+    line-height: 1.8em;
+    text-align: justify;
 }
 
 
@@ -144,9 +155,10 @@ header a:hover {
     margin: auto;
     position: relative;
     top: 30px;
-    color: white;
     font-family: "Montserrat", sans-serif;
-    line-height: 20px;
+    color: #f5f5f5;
+    line-height: 1.8em;
+    text-align: justify;
 }
 
 .mapa {
@@ -272,6 +284,23 @@ header a:hover {
 
 @media (max-width: 800px) {
     
+
+body {
+    animation: fadeIn 2s forwards;
+
+}
+
+
+@keyframes fadeIn {
+    from {
+        opacity: 0;
+    }
+    to {
+        opacity: 1;
+    }
+}
+
+
 header h1 {
     text-align: start;
     right: 60px;
@@ -294,24 +323,34 @@ header .menu {
 .texto1 {
     width: 380px;
     right: 515px;
-    top: 400px;
+    top: 500px;
+}
+
+.texto1 p{
+    width: 360px;
+    right: 10px;
 }
 
 .foto2 img{
     width: 380px;
     height: 400px;
     right: 475px;
-    top: 200px;
+    top: 400px;
 }
 
 .texto2 {
-    top: 600px;
+    top: 800px;
     left: -37px;
-    width: 380px;
+    width: 300px;
+}
+
+.texto2 p{
+    width: 360px;
+    right: 10px;
 }
 
 .home {
-    margin-bottom: 450px;
+    margin-bottom: 750px;
 }
 
 .mapa {
@@ -411,6 +450,20 @@ header .menu {
 #nav.active .ham::after {
     transform: rotate(-135deg);
     top: -12px;
+  }
+
+  .foto1 h1 {
+    display: block;
+    position: relative;
+    left: 22%;
+    font-family: "Roboto", sans-serif;
+    font-weight: 100;
+    font-style: normal;
+    font-size: 40px;
+    color: white;
+}
+
+}
   }
 
 }
